--- a/public/stylesheets/ruby-site.css
+++ b/public/stylesheets/ruby-site.css
@@ -37,10 +37,13 @@ div.ruby-menu-demo-description img {
   margin: 50px 20px 0 0;
 }
 
+footer p{
+  color: #888;
+}
 
 div.footer-body{
   width: 100%;
-  height: 30vh;
+  height: fit-content;
   background-color: #232f3e;
   position:relative;
   bottom: 0;
@@ -48,9 +51,23 @@ div.footer-body{
 
 div.footer-body{
   display: grid;
-  grid-template-columns: 1fr .7fr .7fr 1fr;
+  grid-template-columns: 1fr;
   gap: 2em;
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+
+@media (min-width: 768px) {
+  div.footer-body{
+    grid-template-columns: 1fr .7fr .7fr 1fr;
+  }
+
+  div.footer-body{
+    width: 100%;
+    height: 25vh;
+    background-color: #232f3e;
+    position:relative;
+    bottom: 0;
+  }
 }
 
 div.footer-div{
